# piste_che

./: .gitignore  .slugignore  ARCHITECTURE.md  Cargo.toml  Procfile  README.md
.cargo/: config.toml
.specify/memory/: constitution.md
data/: 20260315_164849_ele.json  serre_chevalier_20260319_221219.json
docs/: 00_naming.md  01_for_constitution.md  02_constitution_prompt.md  04_prompt_for_first_specify.md  05_specify_prompt.md  06_for_feature_resort_generator.md  06_prompt_for_feature_resort_generator.md  07_prompt_for_specify.md  07_specify_prompt.md  08_prompt_for_review.md  09_review.md  10_prompt_for_testing.md  11_test_audit.md  12_prompt_for_fixing.md  13_prompt_after_clear.md  14_prompt_for_implementing_tests.md  15_prompt_after_clear.md  16_prompt_to_update_readme.md  17_prompt_to_update_architecture.md  18_prompt_for_issue_debug_graph.md  19_issue_debug_graph.md  20_prompt_for_specify.md  99_notes.md
resort_generator/: Cargo.toml
resort_generator/src/: elevation.rs  http.rs  main.rs  merge.rs  overpass.rs  types.rs
site/pkg/: piste_che.css  piste_che.d.ts  piste_che.js  piste_che.wasm  piste_che_bg.wasm.d.ts
specs/001-map-filters-route/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-map-filters-route/checklists/: pre-pr.md  requirements.md
specs/001-map-filters-route/contracts/: api.md
specs/002-resort-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-resort-generator/checklists/: pre-impl.md  requirements.md
specs/002-resort-generator/contracts/: cli.md
src/: app.rs  lib.rs  main.rs  models.rs
src/components/: filters.rs  itinerary.rs  map.rs  mod.rs  mode_tabs.rs  segment_popup.rs  selector.rs
src/routing/: chains.rs  data.rs  dijkstra.rs  graph.rs  mod.rs
src/server/: api.rs  mod.rs
style/: main.css
tests/: integration.rs
